--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="index.css">
     <title>Circus</title>
     <style>
         canvas {
@@ -16,13 +20,13 @@
 </head>
 <body>
     <!-- Menu -->
-	<div style="position: fixed;">
-		<ul class="menu__lista">
-			<li onclick="" class=""><a href="">Gallery 1</a></li>
-			<li onclick="" class=""><a href="">Gallery 2</a></li>
-			<li onclick="" class=""><a href="">Gallery 3</a></li>
-		</ul>
+	<div class="container-sm">
+		<nav>
+      <iframe src="header.html"></iframe>
+    </nav>
     </div>
+
+    
     
     <!--ESTADIO-->
     <script src="three.min.js"></script>
