--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <!-- Menu -->
-	<div class="container-sm">
+	<div>
 		<nav>
       <iframe src="header.html"></iframe>
     </nav>
