--- a/header.html
+++ b/header.html
@@ -11,6 +11,7 @@
     <body>
         <nav>
             <ul>
+                <li><a href="#">HOME</a></li>
                 <li><a href="#">GALLERY 1</a></li>
                 <li><a href="#">GALLERY 2</a></li>
                 <li><a href="#">GALLERY 3</a></li>
