--- a/gallery-one.html
+++ b/gallery-one.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="gallery-one.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Oswald">
     <title>GALLERY 1</title>
     <style>
         canvas {
@@ -20,11 +22,20 @@
 </head>
 <body>
     <!-- Menu -->
-	<div>
-		<nav>
-      <iframe src="header.html"></iframe>
-    </nav>
-    </div>
+  <nav style="display: block;">
+    <ul>
+      <li><a href="index.html">HOME</a></li>
+      <li><a href="gallery-one.html">GALLERY 1</a></li>
+      <li><a href="gallery-two.html">GALLERY 2</a></li>
+      <li><a href="gallery-tree.html">GALLERY 3</a></li>
+      <li><a href="gallery-four.html">GALLERY 4</a></li>
+      <li><a href="gallery-five.html">GALLERY 5</a></li>
+      <li><a href="gallery-six.html">GALLERY 6</a></li>
+      <li><a href="#">GALLERY 7</a></li>
+      <li><a href="gallery-eigth.html">GALLERY 8</a></li>
+    </ul>
+  </nav>
+
 
     
     
