--- a/gallery-two.html
+++ b/gallery-two.html
@@ -6,17 +6,26 @@
     <title>Gallery Two</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
     <script src="hue.js"></script>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Oswald">
 </head>
 <body>
     <!-- Menu -->
-	<div style="position: fixed;">
-		<ul class="menu__lista">
-			<li onclick="" class=""><a href="">Gallery 1</a></li>
-			<li onclick="" class=""><a href="">Gallery 2</a></li>
-			<li onclick="" class=""><a href="">Gallery 3</a></li>
-		</ul>
-    </div>
 
+    <nav>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="gallery-one.html">GALLERY 1</a></li>
+                <li><a href="gallery-two.html">GALLERY 2</a></li>
+                <li><a href="gallery-tree.html">GALLERY 3</a></li>
+                <li><a href="gallery-four.html">GALLERY 4</a></li>
+                <li><a href="gallery-five.html">GALLERY 5</a></li>
+                <li><a href="gallery-six.html">GALLERY 6</a></li>
+                <li><a href="#">GALLERY 7</a></li>
+                <li><a href="gallery-eigth.html">GALLERY 8</a></li>
+            </ul>
+        </nav>
     <main>
 
     </main>
