--- a/gallery-five.html
+++ b/gallery-five.html
@@ -2,8 +2,25 @@
   <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
     <script src="pulso.js"></script>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Oswald">
+    <title>GALLERY 5</title>
   </head>
   <body>
+    <nav>
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="gallery-one.html">GALLERY 1</a></li>
+            <li><a href="gallery-two.html">GALLERY 2</a></li>
+            <li><a href="gallery-tree.html">GALLERY 3</a></li>
+            <li><a href="gallery-four.html">GALLERY 4</a></li>
+            <li><a href="gallery-five.html">GALLERY 5</a></li>
+            <li><a href="gallery-six.html">GALLERY 6</a></li>
+            <li><a href="#">GALLERY 7</a></li>
+            <li><a href="gallery-eigth.html">GALLERY 8</a></li>
+        </ul>
+    </nav>
     <main>
     </main>
   </body>
