--- a/gallery-four.html
+++ b/gallery-four.html
@@ -7,16 +7,26 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/addons/p5.sound.min.js"></script>`
     <script src="ampMod.js"></script>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Oswald">
+    <title>GALLERY 4</title>
 </head>
 <body>
     <!-- Menu -->
-	<div style="position: fixed;">
-		<ul class="menu__lista">
-			<li onclick="" class=""><a href="">Gallery 1</a></li>
-			<li onclick="" class=""><a href="">Gallery 2</a></li>
-			<li onclick="" class=""><a href="">Gallery 3</a></li>
-		</ul>
-    </div>
+	<nav>
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="gallery-one.html">GALLERY 1</a></li>
+            <li><a href="gallery-two.html">GALLERY 2</a></li>
+            <li><a href="gallery-tree.html">GALLERY 3</a></li>
+            <li><a href="gallery-four.html">GALLERY 4</a></li>
+            <li><a href="gallery-five.html">GALLERY 5</a></li>
+            <li><a href="gallery-six.html">GALLERY 6</a></li>
+            <li><a href="#">GALLERY 7</a></li>
+            <li><a href="gallery-eigth.html">GALLERY 8</a></li>
+        </ul>
+    </nav>
 
     <main>
 
