--- a/gallery-two.html
+++ b/gallery-two.html
@@ -9,23 +9,23 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Oswald">
+    <title>GALLERY 2</title>
 </head>
 <body>
     <!-- Menu -->
-
     <nav>
-            <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="gallery-one.html">GALLERY 1</a></li>
-                <li><a href="gallery-two.html">GALLERY 2</a></li>
-                <li><a href="gallery-tree.html">GALLERY 3</a></li>
-                <li><a href="gallery-four.html">GALLERY 4</a></li>
-                <li><a href="gallery-five.html">GALLERY 5</a></li>
-                <li><a href="gallery-six.html">GALLERY 6</a></li>
-                <li><a href="#">GALLERY 7</a></li>
-                <li><a href="gallery-eigth.html">GALLERY 8</a></li>
-            </ul>
-        </nav>
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="gallery-one.html">GALLERY 1</a></li>
+            <li><a href="gallery-two.html">GALLERY 2</a></li>
+            <li><a href="gallery-tree.html">GALLERY 3</a></li>
+            <li><a href="gallery-four.html">GALLERY 4</a></li>
+            <li><a href="gallery-five.html">GALLERY 5</a></li>
+            <li><a href="gallery-six.html">GALLERY 6</a></li>
+            <li><a href="#">GALLERY 7</a></li>
+            <li><a href="gallery-eigth.html">GALLERY 8</a></li>
+        </ul>
+    </nav>
     <main>
 
     </main>
