--- a/gallery-two.html
+++ b/gallery-two.html
@@ -6,15 +6,14 @@
     <title>Gallery Two</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
     <script src="hue.js"></script>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <!-- Menu -->
-	<div style="position: fixed;">
-		<ul class="menu__lista">
-			<li onclick="" class=""><a href="">Gallery 1</a></li>
-			<li onclick="" class=""><a href="">Gallery 2</a></li>
-			<li onclick="" class=""><a href="">Gallery 3</a></li>
-		</ul>
+    <div>
+        <nav>
+            <iframe src="header.html"></iframe>
+        </nav>
     </div>
 
     <main>
