--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
-    <title>Circus</title>
+    <title>Gallery One</title>
     <style>
         canvas {
           width: 100%;
@@ -20,10 +20,10 @@
 </head>
 <body>
     <!-- Menu -->
-	<div>
-		<nav>
-      <iframe src="header.html"></iframe>
-    </nav>
+    <div>
+        <nav>
+            <iframe src="header.html"></iframe>
+        </nav>
     </div>
 
     
