--- a/gallery-eigth.html
+++ b/gallery-eigth.html
@@ -2,7 +2,7 @@
   <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
     <script src="hide.js"></script>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="global.css">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Oswald">
     <title>GALLERY 8</title>
