--- a/gallery-four.html
+++ b/gallery-four.html
@@ -7,7 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/addons/p5.sound.min.js"></script>`
     <script src="ampMod.js"></script>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="global.css">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Oswald">
     <title>GALLERY 4</title>
