--- a/gallery-six.html
+++ b/gallery-six.html
@@ -3,7 +3,7 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/addons/p5.sound.min.js"></script>
     <script src="piano.js"></script>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="global.css">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Oswald">
     <title>GALLERY 6</title>
