--- a/gallery-two.html
+++ b/gallery-two.html
@@ -6,7 +6,7 @@
     <title>Gallery Two</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
     <script src="hue.js"></script>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="global.css">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Oswald">
     <title>GALLERY 2</title>
