--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <head>
         <title>HOME</title>
         <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="global.css">
         <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Oswald">
+        <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Montserrat">
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     </head>
 
     <body>
@@ -22,5 +28,15 @@
                 <li><a href="gallery-eigth.html">GALLERY 8</a></li>
             </ul>
         </nav>
+        <div class="flex-container">
+            <p class="animate__animated animate__bounceInLeft animate_delay-4s">
+                The new reality
+                <br>
+                has changed our lives
+            </p>
+            <h1 class="animate__animated animate__fadeIn animate_delay-4s"></h1>
+            
+            <h1 class="animate__animated animate__fadeIn animate_delay-5s"></h1>
+        </div>
     </body>
 </html>
