--- a/gallery-seven.html
+++ b/gallery-seven.html
@@ -1,11 +1,16 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    
+    <link rel="stylesheet" href="gallery-seven.css">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
     <script src="vidPix.js"></script>
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Oswald">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>GALLERY 7</title>
   </head>
   <body>
@@ -23,6 +28,10 @@
         </ul>
     </nav>
     <main>
+      
+    <p class="animate__animated animate__pulse animate_delay-5s">
+      Relax
+  </p>
     </main>
     <audio autoplay>
         <source src="sofar.mp3" type="audio/mpeg">
