--- a/gallery-two.html
+++ b/gallery-two.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="gallery-two.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
     <script src="hue.js"></script>
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Oswald">
+    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Oswald">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>GALLERY 2</title>
 </head>
 <body>
@@ -26,7 +32,9 @@
         </ul>
     </nav>
     <main>
-
+        <p class="animate__animated animate__tada animate_delay-5s" style="position: absolute; margin-top: 220px; margin-left: 100px;">
+            Color
+        </p>
     </main>
 </body>
 </html>
