--- a/gallery-seven.html
+++ b/gallery-seven.html
@@ -24,5 +24,9 @@
     </nav>
     <main>
     </main>
+    <audio autoplay>
+        <source src="sofar.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
   </body>
 </html>
