--- a/gallery-tree.html
+++ b/gallery-tree.html
@@ -1,10 +1,13 @@
 <html>
   <head>
+    <link rel="stylesheet" href="gallery-tree.css">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
     <script src="mandala.js"></script>
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Oswald">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>GALLERY 3</title>
   </head>
   <body>
@@ -22,8 +25,8 @@
         </ul>
     </nav>
     <main>
-      <p style="position: absolute; margin-top: 200px; margin-left: 300px;">
-        hola
+      <p class="animate__animated animate__wobble animate_delay-5s" style="position: absolute; margin-top: 100px; margin-left: 100px;">
+        Concentrate
       </p>
     </main>
   </body>
