--- a/gallery-four.html
+++ b/gallery-four.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="gallery-four.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery Four</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
@@ -10,6 +11,8 @@
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Oswald">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>GALLERY 4</title>
 </head>
 <body>
@@ -29,7 +32,9 @@
     </nav>
 
     <main>
-
+        <p class="animate__animated animate__swing animate_delay-5s" style="position: absolute; margin-top: 120px; margin-left: 100px;">
+            Hear
+        </p>
     </main>
 </body>
 </html>
