--- a/gallery-six.html
+++ b/gallery-six.html
@@ -1,11 +1,16 @@
 <html>
   <head>
+    <link rel="stylesheet" href="gallery-six.css">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/addons/p5.sound.min.js"></script>
     <script src="piano.js"></script>
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Oswald">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>GALLERY 6</title>
   </head>
   <body>
@@ -23,6 +28,9 @@
         </ul>
     </nav>
     <main>
+      <p class="animate__animated animate__rubberBand animate_delay-5s" style="position: absolute; margin-top: 20px; margin-left: 50px;">
+        Play
+    </p>
     </main>
   </body>
 </html>
