index mas avanzado

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+        <style>
+            body{
+                background-color: #ffffff;
+                background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpolygon fill='%23ffe8e7' points='800 100 0 200 0 800 1600 800 1600 200'/%3E%3Cpolygon fill='%23ffd1ce' points='800 200 0 400 0 800 1600 800 1600 400'/%3E%3Cpolygon fill='%23ffbab6' points='800 300 0 600 0 800 1600 800 1600 600'/%3E%3Cpolygon fill='%23fea49e' points='1600 800 800 400 0 800'/%3E%3Cpolygon fill='%23fe8d86' points='1280 800 800 500 320 800'/%3E%3Cpolygon fill='%23fe766d' points='533.3 800 1066.7 800 800 600'/%3E%3Cpolygon fill='%23fe5f55' points='684.1 800 914.3 800 800 700'/%3E%3C/g%3E%3C/svg%3E");
+                background-attachment: fixed;
+                background-size: cover;     
+            }
+        </style>
     </head>
 
     <body>
@@ -28,15 +36,19 @@
                 <li><a href="gallery-eigth.html">GALLERY 8</a></li>
             </ul>
         </nav>
-        <div class="flex-container">
+        <div class="first">
             <p class="animate__animated animate__bounceInLeft animate_delay-4s">
                 The new reality
                 <br>
                 has changed our lives
             </p>
-            <h1 class="animate__animated animate__fadeIn animate_delay-4s"></h1>
-            
-            <h1 class="animate__animated animate__fadeIn animate_delay-5s"></h1>
+        </div>
+        <div class="second">
+           <p class="animate__animated animate__bounceInRight animate_delay-4s">
+                Explore yourself exploring
+                <br>
+                an interactive web
+            </p>
         </div>
     </body>
 </html>
