--- a/gallery-tree.html
+++ b/gallery-tree.html
@@ -22,6 +22,9 @@
         </ul>
     </nav>
     <main>
+      <p style="position: absolute; margin-top: 200px; margin-left: 300px;">
+        hola
+      </p>
     </main>
   </body>
 </html>
